--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,28 @@
-html,
+/*
+    Most of this style is copied from https://codepen.io/anon/pen/jbWEQv
+    Loader is taken from http://tobiasahlin.com/spinkit/
+*/
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300);
+
+*{
+	font-family:'Source Sans Pro',sans-serif;
+    font-weight:500;
+    color: #244;
+}
+html {
+	background: #50a3a2;
+    background: -webkit-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
+    background: -moz-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
+    background: -o-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
+    background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
+}
+h1 {text-align: center;}
 body {
     margin:0;
     padding:0;
-	font-family:'Source Sans Pro',sans-serif;
 }
-div {margin:1em 0;}
+div {
+    font-size:14pt;margin:1em 0;}
 #container {
     width:600px;
     margin:0 auto;
@@ -19,15 +37,80 @@ div {margin:1em 0;}
 }
 #loading { text-align: center;}
 textarea {
-	font-family:'Source Sans Pro',sans-serif;
-    font-size:12pt;
-    height:50em;
+    font-size:14pt;
+    height:42em;
     width:95%;
+    border:1px solid black;
+    box-shadow: 0 0 0px #719ECE;
+    resize: none;
+  background: transparent;
 }
 textarea.hidden {
-	font-family:'Source Sans Pro',sans-serif;
-    font-size:12pt;
     height:5em;
-    width:95%;
 }
 input[type="submit"] { float:right; }
+
+	button{
+        text-align: center;
+		appearance: none;
+		outline: 0;
+		background-color: white;
+		border: 0;
+        display:block;
+        margin: 0 auto;
+		padding: 10px 15px;
+		border-radius: 3px;
+		width: 250px;
+		cursor: pointer;
+		font-size: 18px;
+        transition-duration: 0.25s;
+        color: #496;
+		
+		&:hover{
+			background-color: rgb(245, 247, 249);
+		}
+    }
+    
+.spinner {
+    display: none;
+    margin: 100px auto 0;
+    width: 70px;
+    text-align: center;
+}
+
+.spinner > div {
+    width: 18px;
+    height: 18px;
+    background-color: #333;
+
+    border-radius: 100%;
+    display: inline-block;
+    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+    animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+.spinner .bounce1 {
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+    0%, 80%, 100% { -webkit-transform: scale(0) }
+    40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bouncedelay {
+    0%, 80%, 100% { 
+        -webkit-transform: scale(0);
+        transform: scale(0);
+    } 40% { 
+        -webkit-transform: scale(1.0);
+        transform: scale(1.0);
+    }
+}
+.email {color: #200;}
