--- a/static/style.css
+++ b/static/style.css
@@ -113,4 +113,4 @@ input[type="submit"] { float:right; }
         transform: scale(1.0);
     }
 }
-.email {color: #200;}
+.email {color: #200; font-weight: bold;}
