--- a/static/style.css
+++ b/static/style.css
@@ -16,13 +16,18 @@ html {
     background: -o-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
     background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
 }
-h1 {text-align: center;}
+h1 {
+    text-align: center;
+    margin:0;
+}
 body {
     margin:0;
     padding:0;
 }
 div {
-    font-size:14pt;margin:1em 0;}
+    font-size:14pt;
+    margin:1em 0;
+}
 #container {
     width:600px;
     margin:0 auto;
