--- a/static/style.css
+++ b/static/style.css
@@ -61,6 +61,9 @@ textarea {
     font-size: 24pt;
     color: #7ff;
 }
+#Emails-container:hover {
+    cursor: pointer;
+}
 #Emails-container:hover #hoverText {
     display: block;
 }
